clusters/home/longhorn-system/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.f9.casa`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
        # - name: default-headers
        #   namespace: default
      services:
        - name: longhorn-frontend
          port: 80
